# DoAnCoSo

./: .gitignore  Cargo.toml  LICENSE  chain_spec.json  raw_chain_spec.json
Polkadot/: .gitignore  5ED2bvzjWvDthRNQ8L7e4hVhKX9BWBKv3SvC6SkfnezdiRpt.json  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  chain_spec.json  dacs_chain-spec.json  para-state  plain_chain_spec.json  raw_chain_spec.json
Polkadot/data/chains/DACS_CTK47B/network/: secret_ed25519
Polkadot/node/: Cargo.toml  build.rs
Polkadot/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
Polkadot/pallets/blog-pallet/: Cargo.toml
Polkadot/pallets/blog-pallet/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
Polkadot/runtime/: Cargo.toml  build.rs
Polkadot/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
Polkadot/runtime/src/configs/: mod.rs  xcm_config.rs
Polkadot/runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  paritydb_weights.rs  rocksdb_weights.rs
Rust/Student_Management/: Cargo.toml  README.md  students.json  students.txt
Rust/Student_Management/data/: students.json  students.txt
Rust/Student_Management/src/: file_handler.rs  lib.rs  main.rs  menu.rs  student.rs
Rust/Student_Management/tests/: integration.rs
node/src/: chain_spec.rs  command.rs
pallets/demo_pallet/: Cargo.toml
pallets/demo_pallet/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
tests/: pallet_tests.rs
